up form register hotel, cac giao dien

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 # dat NEXT_PUBLIC_ prefix: de co the truy cap tu side client
-NEXT_PUBLIC_HOTEL_SERVICE_API_BASE_URL=http://localhost:8080/hotel
+NEXT_PUBLIC_HOTEL_SERVICE_API_BASE_URL=http://localhost:3004
 NEXT_PUBLIC_CLIENT_BASE_URL=http://localhost:3010
 NEXT_PUBLIC_USER_SERVICE_API_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_LOCATION_SERVICE_API_BASE_URL=http://localhost:3003
+NEXT_PUBLIC_RES_SERVICE_API_BASE_URL=http://localhost:3001
