update, chua xong chuc nang cap nhat phong, hang phong khach san, hotel, dang nhap, dang xuat

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXT_PUBLIC_CLIENT_BASE_URL=http://localhost:3010
 NEXT_PUBLIC_USER_SERVICE_API_BASE_URL=http://localhost:3000
 NEXT_PUBLIC_LOCATION_SERVICE_API_BASE_URL=http://localhost:3003
 NEXT_PUBLIC_RES_SERVICE_API_BASE_URL=http://localhost:3001
+NEXT_PUBLIC_BOOKING_SERVICE_API_BASE_URL=http://localhost:3002
